# screencap

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
examples/: capture_image.rs  capture_region_image.rs
examples/common/: image.rs
src/: common.rs  lib.rs
src/macos/: capture.rs  mod.rs  monitor.rs
src/windows/: capture.rs  common.rs  dxgi.rs  gdi.rs  graphics_capture.rs  mod.rs  monitor.rs
